<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainConstraintLayout"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvPreview"
        android:layout_width="364dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/tvPreviewHint"
        android:scrollbars="vertical"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHttpParser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReader"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableRight="@mipmap/read_icon"
        android:onClick="onClickReader"
        android:text="@string/btnReaderLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnHttpParser"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:drawableTop="@mipmap/web_icon"
        android:onClick="onClickHttpParser"
        android:text="@string/btnWebLabel"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCamera" />

    <Button
        android:id="@+id/btnPaste"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:drawableTop="@mipmap/content_paste"
        android:onClick="onClickPaste"
        android:text="@string/btnPasteLabel"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:drawableTop="@mipmap/camera_icon"
        android:onClick="onClickCamera"
        android:text="@string/btnCameraLabel"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPaste" />



</android.support.constraint.ConstraintLayout>