<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Light"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="2dp">


    <EditText
        android:id="@+id/editLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/tvLinkHint"
        android:inputType="text"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClosePopUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/close_icon"
            android:text="@string/btnClosePopUP" />

        <Button
            android:id="@+id/btnPastePopUpHttp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/content_paste"
            android:text="@string/btnPasteLabel" />

        <Button
            android:id="@+id/btnGetText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/read_icon"
            android:text="@string/btnGetTextLabel" />
    </LinearLayout>

</LinearLayout>