...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/readerConstraintLayout"
    tools:context=".ReaderActivity">

    <TextView
        android:id="@+id/tvMainText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnAnalyzeWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNextWord"
...
