...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/analyzeConstraintLayout"
    tools:context=".AnalysisActivity">

    <TextView
        android:id="@+id/tvSyllable"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...
